# mexfunctions

./: CMakeLists.txt
atomicmex/: CMakeLists.txt  atomic.c  atomic.h  atomic_param.h  atomicmex.c  atomicmex.mexw32  atomicmodule.c  atomictest.py  setup.py
atomicmex/python/: atomicmodule.c  atomictest.py  setup.py
bessmex/: besscoef.m  bessmex.c  bessmex.mexw32
cardanomex/: CMakeLists.txt  cardano.c  cardano.h  cardanomex.c
cardanomex/octave/: CMakeLists.txt  cardanomex.c  cardanomex.mexw32
common/: CMakeLists.txt  SConstruct  common.c  common.h
dblMaxwmex/: CMakeLists.txt  angle_int.c  angle_int.h  angle_int_test.c  dblMaxw.c  dblMaxw.h  dblMaxwmex.c  dblMaxwmex.mexw32  make.m  test_dblMaxw.m
dblMaxwmex/octave/: CMakeLists.txt  dblMaxwmex.c  dblMaxwmex.mexw32  test_dblMaxw.m  test_dblMaxw2.m
dblMaxwmex/python/: CMakeLists.txt  dblMaxwmodule.c  dblMaxwmodule_test.py  setup.py
dierckx/: CMakeLists.txt  bispeu.f  curfit.f  dierckx.c  dierckx.h  fpader.f  spalde.f  splder.f  splev.f  splevv.f  splint.f  sproot.f
dierckx/python/: CMakeLists.txt  ddierckx.pyf  ddierckxmodule.c  dierckx.pyf  dierckxmodule.c  f2py_files.txt  setup.py
distutils_f2py/: distutils_f2py.py  setup.py
ellipfast/: ellipfast.m  ellipfast0.m  ellipfastmex.c
fdlibm/: makefile
fieldline/: CMakeLists.txt  fieldline.c  fieldline.h
fieldline/python/: CMakeLists.txt  setup.py
fieldline/python/fieldline/: fieldlinemodule.c
fitfun/: CMakeLists.txt  fitfun.c  fitfun.h
fitfun/python/: CMakeLists.txt  accelmodule.c  fitfun.py  fitfun_cffi.py  fitfun_ctypes.py  fitfun_cython_autogen.py  fitfunmodule.c  setup.py
fitfun/python/boost.python/: fitfun_boost.cpp  fitfun_boost_numpy.cpp  setup.py
fitpack/: CMakeLists.txt  all.eml  all.f  fitpack.f
fitpack/python/: CMakeLists.txt
gpc/: gpc.m  gpc_cut_mex.c  gpc_cut_mex.mexw32  gpc_tpatch.m  gpc_tpatch2.m  gpc_tpatch_test.m  gpcmex.c  gpcmex.mexw32
mdsclient/: CMakeLists.txt  MdsClose.m  MdsGetSig.m  MdsGetTime.m  MdsOpen.m  MdsValue.m  SConstruct  getsock.m  ipdesc.h  makefile.m  mdsclient.c  mdsclient.h  mdsclient.mexa64  mdsclient.mexglx  mdsclient.mexw32  mdsclient_test.c  mdsclientmex.c  mdsclientmex.mexa64  mdsclientmodule.c  mdsclientmodule_test.py  mdsclientoct.cc  mdsip.h  mdsiputil.c  setup.py  sm_mdscd.m  sm_mdsclose.m  sm_mdsconnect.m  sm_mdsdir.m  sm_mdsdisconnect.m  sm_mdsopen.m  sm_mdsput.m  sm_mdspwd.m  sm_mdsvalue.m  tcp.c  tcp.h  tcp_linux.h  tcp_win32.h
mdsclient/cmake/Modules/: Findmdsplus.cmake
mdsclient/matlab/: MdsClose.m  MdsGetTime.m  addsock.m  mdsclient.mexmaci  mdsclientmex.c  mdsclientmex.mexa64  remsock.m  sm_mdscd.m  sm_mdsdir.m  sm_mdsopen.m  sm_mdsput.m  sm_mdspwd.m
mdsclient/mdsiputil/: adler32.c  config.h  mdsip.h  mdsiputil.c  uncompr.c  zconf.h  zutil.c
mdsclient/octave/: CMakeLists.txt  mdsclientoct.cc
mdsclient/python/: CMakeLists.txt  mdsclientmodule.c  mdsclientmodule_test.py  setup.py
mdsclient/python/mdsclient/: __init__.py  mdsclientmodule.c  mdsclientmodule_test.py
mdsclient/test_mdsconnect/: Makefile  test_mdsconnect  test_mdsconnect.c
mdsclient/zlib/: compress.c  deflate.c  deflate.h  trees.c  zutil.h
mediansmoothmex/: CMakeLists.txt  mediansmooth.c  mediansmooth.h  mediansmooth.m  mediansmooth_pqueue.c  mediansmooth_pqueue.h  mediansmooth_template.c  mediansmoothmex.c  mediansmoothmex.mexw32  mediansmoothmex_66.c  pqueue.c  pqueue.h  pqueue2.c  pqueue2.h  pqueue_wrap.c  quick_select.c  torben.c  undef.h
mediansmoothmex/octave/: CMakeLists.txt  mediansmoothmex.c  mediansmoothmex.mexw32
mediansmoothmex/python/: CMakeLists.txt  mediansmoothmodule.c  mediansmoothmodule_test.py  setup.py
minpack/: CMakeLists.txt  minpack.c  minpack.h  minpack_test.c
minpack/python/: CMakeLists.txt  minpackmodule.c  setup.py
odepack/: CMakeLists.txt  odepack.c  odepack.h  odepack_test.c
odepack/python/: CMakeLists.txt  odepack.py  odepack_ctypes.py  odepack_test.py  odepackmodule.c  setup.py
odepack/python/odepack/: __init__.py
pnpolymex/: pnpolymex.c  pnpolymex.mexa64  pnpolymex.mexw32
pppack/: CMakeLists.txt  bsplppd.f  bual.f  bualder.f  bvalued.f  f2py_files.txt  l2.f90  pppack.f90  pppack_prb.f90  ppual.f  ppualder.f  spder.f  spual.f  spualder.f
pppack/netlib/: Makefile  bsplpp.f  bsplvb.f  colloc.f  cwidth.f  difequ.f  interv.f  l2appr.f  l2err.f  l2knts.f  l2main.f  newnot.f  setdatex2.f  setdatex3.f  setdatex4.f  slvblktext.f  spli2d.f  splint.f  splopt.f  tautsp.f  titand.f
pppack/python/: chebyshev_spline.py  dpppack.pyf  dpppackmodule.c  f2py_files.txt  fortranobject.c  pppack.pyf  pppack_prb.py  pppackmodule.c  setup.py  splinetoolbox.py
pypy/: ndarrayobject.py  test_ndarrayobject.py
quadmex/: GaussLegendre.m  functions.c  gauss_2d_sphere_example.c  gauss_legendre.c  gauss_legendre.h  gauss_legendre_example.c  make.m  quad.c  quad.h  quadfun.c  quadfun.h  quadfunmex.c  quadfunmex.mexw32  quadlab.mexw32  quadlab.mexw64  quadmex.c  quadmex.mexw32  quadmex_test.m
slatec/: CMakeLists.txt
slatec/chk/: slatec_chk.tgz
slatec/ext/: dbsped.f  dbsped.f90  dbualu.f  dbualu.f90
slatec/python/: _dslatecmodule.c  _slatecmodule.c  dslatec.pyf  dslatecmodule.c  f2py_files.txt  setup.py  slatec.pyf  slatecmodule.c
sort/: CMakeLists.txt  sort.c  sort.cpp  sort.h
sort/python/: CMakeLists.txt  setup.py  sortmodule.c  sortmodule.cpp
specfunmex/: CMakeLists.txt  SConstruct  setup.py  specfun.f  specfun.h  specfunmex.c  specfunmex.mexw32  specfunmodule.c  specfunoct.cc
specfunmex/octave/: CMakeLists.txt  specfunmex.mexw32  specfunoct.cc
specfunmex/python/: CMakeLists.txt  setup.py  specfunmodule.c  specfuntest.py
template/: setup.py  templatemodule.c
tictoc/: setup.py  (+1 more)
triblockmex/: CMakeLists.txt  _triblock.c  _triblock.h  dgesv_ex.c  make.m  make.sh  mm.c  setup.py  triblock_solve.m  triblock_solve.py  triblock_solve_test.m  triblock_solve_test.py  triblockmex.c  triblockmex.mexw32  triblockmodule.c  triblockoct.cc
triblockmex/octave/: CMakeLists.txt  triblock_solve.m  triblockoct.cc
triblockmex/python/: CMakeLists.txt  setup.py  triblockmodule.c
(+2 files in other folders)
